@startuml class_verdict_algebra
' Діаграма класів: алгебра вердиктів і ланцюг ризик-правил (risk/verdict.py, risk/guard.py, risk/rules/*).
' Імена — фактичні класи src/fuzzhelm/{detectors,decision,fuzzy,risk} (HEAD b933802). Автор: Андрій Жук, 2026.
title Алгебра вердиктів ризик-ланцюга: RiskRule → RuleVerdict → compose → GuardResult
skinparam defaultFontName Helvetica
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 30
top to bottom direction

package "risk" {
  enum VerdictKind {
    ALLOW
    SHRINK
    VETO
  }
  class Verdict <<frozen dataclass>> {
    + kind : VerdictKind
    + factor : Fraction
    + factor_dec : Decimal  (floor 1e−18)
    --
    ALLOW ↔ factor = 1
    VETO ↔ factor = 0
    SHRINK ↔ factor ∈ (0; 1) строго
  }
  class "verdict" as VFN <<module>> {
    + ALLOW, VETO : Verdict
    + shrink(f) : Verdict
    + compose(verdicts) : Verdict
    + exposure(verdict, requested) : Decimal
  }
  class RuleVerdict <<frozen dataclass>> {
    + rule : str
    + verdict : Verdict
    + observed : Decimal | None
    + limit : Decimal | None
    + payload : Mapping
    + halt : bool
  }
  interface RiskRule <<Protocol>> {
    + name : str
    + check(ctx : RiskContext) : RuleVerdict
  }
  class StaleDataGuard
  class MaxPositionNotional
  class MaxGrossLeverage
  class MaxDailyLoss
  class MaxDrawdownHalt
  class LiquidationBufferGuard
  class RiskModeGate {
    cooldown_policy : scaled_entries | reduce_only
  }
  class RiskContext {
    base_qty, increase_qty, post_qty
    drawdown, pnl_day, dq_score, risk_state, …
  }
  class RiskGuard {
    + rules : Sequence[RiskRule]
    + journal : RiskJournal
    + evaluate(ctx) : GuardResult
    + from_config(cfg, journal, *, killswitch)
  }
  class GuardResult {
    verdict, records, approved_qty
    flatten_all, halt
    + order_qty
  }
}

StaleDataGuard ..|> RiskRule
MaxPositionNotional ..|> RiskRule
MaxGrossLeverage ..|> RiskRule
MaxDailyLoss ..|> RiskRule
MaxDrawdownHalt ..|> RiskRule
LiquidationBufferGuard ..|> RiskRule
RiskModeGate ..|> RiskRule
RiskRule ..> RuleVerdict
RiskRule ..> RiskContext : читає
RuleVerdict --> Verdict
Verdict --> VerdictKind
RiskGuard o-- "7" RiskRule : ланцюг (6 лімітів + risk_mode)
RiskGuard ..> VFN : compose()
RiskGuard ..> GuardResult

note bottom of VFN
  compose(v₁..vₙ) = VETO, якщо ∃ vᵢ = VETO;
                  = SHRINK(Π fᵢ), інакше якщо є SHRINK;
                  = ALLOW, інакше (порожній ланцюг → ALLOW).
  Точний раціональний добуток (Fraction) ⇒ комутативний моноїд:
  ALLOW — одиниця, VETO — поглинаючий елемент.
  Інваріант: exposure(compose(V)) ≤ minᵢ exposure(vᵢ) ≤ requested
  (property: test_risk_chain_never_increases_exposure, ≤ 20 вердиктів).
  Правила гейтять лише приріст; зменшення/закриття проходить завжди.
end note
@enduml
